# electricsheep

./: .gitignore  Compiling.md  ConfigFileSettings.md  FAQ.md  ProjectHome.md  Protocol.md  readme.txt
client_generic/: Makefile.am  configure.ac  electricsheep-saver
client_generic/Build_guides/: Ubuntu_ibex.txt  Vista(x64).txt  Windows_VisualStudio.txt
client_generic/Client/: CrossFade.h  CubicFrameDisplay.h  FrameDisplay.h  Hud.cpp  Hud.h  LinearFrameDisplay.h  Makefile.am  MonoInstance.h  PlayCounter.h  Player.cpp  Player.h  ServerMessage.h  Splash.h  StartupScreen.h  StatsConsole.h  Voting.cpp  Voting.h  client.h  client.rc  client_linux.h  client_mac.h  client_win32.h  lua_playlist.h  main.cpp
client_generic/Common/: AlignedBuffer.h  BlockingQueue.h  Common.cbp  Common.cpp  Common.h  Exception.cpp  Exception.h  Log.cpp  LuaState.cpp  LuaState.h  MathBase.h  ProcessForker.h  SmartPtr.h  Timer.h  WTimer.h  XTimer.h  clientversion.h  isaac.cpp  linkpool.h  pool.h
client_generic/Common/Math/: Matrix.h  Matrix3x3_x86.h  Rect.h  Vector2_X86.h  Vector3.h  fastbez.h
client_generic/ContentDecoder/: ContentDecoder.cbp  ContentDecoder.cpp  ContentDecoder.h  DirectoryPlaylist.h  Frame.h  LoopingPlaylist.h  Playlist.h  SimplePlaylist.h  graph_playlist.h
client_generic/ContentDownloader/: ContentDownloader.cbp  ContentDownloader.cpp  ContentDownloader.h  Sheep.cpp  Sheep.h  SheepDownloader.cpp  SheepDownloader.h  SheepGenerator.cpp  SheepGenerator.h  SheepUploader.cpp  SheepUploader.h  Shepherd.cpp  Shepherd.h  Torrent.h
client_generic/DisplayOutput/: Image.cpp  Image.h  LoadDDS.cpp  LoadPNG.cpp
client_generic/DisplayOutput/DirectX/: DisplayDX.cpp  DisplayDX.h  FontDX.cpp  RendererDX.cpp  RendererDX.h  ShaderDX.cpp  TextureFlatDX.cpp  TextureFlatDX.h
client_generic/DisplayOutput/OpenGL/: DisplayGL.h  ESOpenGLView.h  ESOpenGLView.m  FontGL.cpp  GLee.c  RendererGL.cpp  RendererGL.h  ShaderGL.cpp  ShaderGL.h  TextureFlatGL.cpp  TextureFlatGL.h  glx.cpp  glx.h  mgl.cpp  wgl.cpp
client_generic/DisplayOutput/Renderer/: Font.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  TextureFlat.cpp
client_generic/Flam3/: Flam3.cbp
client_generic/Flam3/flam3-2.7.10/: Makefile.am  Makefile.in  README.txt  config.h.in  configure  docstring.c  flam3-genome.c  flam3-palettes.c  flam3-render.c  flam3.c  flam3.dsw  flam3.h  isaac.c  jpeg.c  private.h  rect.c  vidres.flam3
client_generic/Flam3/flam3-2.7.15/: Makefile.am  Makefile.in  config.h  docstring.c  flam3-animate.c  flam3-convert.c  flam3-palettes.c  flam3-palettes.xml  flam3.c  flam3.h  img.h  isaac.h  isaacs.h  mkinstalldirs  private.h  render.dsp
client_generic/InstallerMSVC/: nsis_installer.nsi  readme.nsh
client_generic/Launcher/: main.cpp
client_generic/MSVC/: DirDrawErrs.h  DirectX_DLL_functions.h  DisplayDD.cpp  RendererDD.cpp  RendererDD.h  TextureFlatDD.cpp  cpu_usage_win32.h  electricsheep.sln  electricsheep.vcxproj  electricsheep.vcxproj.filters  msvc_fix.cpp  msvc_fix.h
client_generic/MSVC/SettingsGUI/: Makefile.am  SettingsGUI.sln  SettingsGUI.vcxproj  SettingsGUI.vcxproj.filters  config.cpp  config.fbp  config.h  electricsheepguiMyDialog2.cpp  electricsheepguiMyDialog2.h  main.cpp  main.h
client_generic/MacBuild/: Credits.html  ESConfiguration.h  ESConfiguration.m  ESScreensaver.cpp  ESScreensaver.h  ESScreensaverView.h  ESScreensaverView.m  ESWindow.h  ESWindow.m  ElectricSheep-Info.plist  ScreenSaver-Info.plist  build_delivery.sh  build_delivery_xcode3.sh  build_installer.sh  build_installer_xcode3.sh  dsa_pub.pem  green.tif  main.m  proximus-Info.plist  proximus.c  proximus.h  red.tif  thumbnail.tif  yellow.tif
client_generic/MacBuild/ElectricSheep-Xcode3.xcodeproj/: project.pbxproj
client_generic/MacBuild/ElectricSheep.xcodeproj/: project.pbxproj
client_generic/MacBuild/English.lproj/: MainMenu.xib
client_generic/MacBuild/Installer.pmdoc/: 01electric-contents.xml  01electric.xml  02electric-contents.xml  02electric.xml  index.xml
client_generic/MacBuild/Installer_with_initial_pack.pmdoc/: 01electric.xml  index.xml
client_generic/Networking/: Download.cpp  Networking.cbp  Networking.cpp  Networking.h  Upload.cpp
client_generic/Runtime/: Instructions.rtf  License.rtf  TrebuchetMS-20.glf  TrebuchetMS-24.glf  flam3-animate  sheep_logo.xpm  sheep_logo2.xpm
client_generic/Runtime/Scripts/: class.lua  playlist.lua  pq.lua  serialize.lua
client_generic/TupleStorage/: TupleStorage.cbp  diriterator.cpp  diriterator.h  luastorage.cpp  storage.cpp  storage.h
client_generic/boost/osx/: get_boost.sh
client_generic/curlTest/: curlTest.cbp  luacurl.cpp  luazlib.cpp  main.cpp
client_generic/libpng/include/: pngconf.h  pnglibconf.h
client_generic/libxml/lib/: xml2Conf.sh
client_generic/lua5.1/etc/: Makefile  README  luavs.bat
client_generic/lua5.1/mak.vs2005/: bin2c5.1_exe.depend  lua5.1.sln  lua5.1_dll.vcxproj  lua5.1_exe.vcxproj  lua5.1_lib.vcxproj  luac5.1_exe.cbp  luac5.1_exe.depend  luac5.1_exe.vcxproj  wlua5.1_exe.vcxproj
client_generic/lua5.1/src/: Makefile  config.mak  lmathlib.c  lua.rc  lua5.1  lua5.1.def  lua_conf.inc  luac5.1
client_generic/menu-entries/: ElectricSheep.desktop  electricsheep-saver.desktop  electricsheep.xpm
client_generic/rpm/: build.sh  required-packages.yum.list
client_generic/tinyXml/: tinyXml.cbp  tinyXmlTest.vcxproj  tinyXmlTestSTL.vcxproj  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
client_generic/wxConfig/: config.fbp  config.xrc
trunk/client_generic/: ElectricSheep.workspace  Makefile.am  autogen.sh  configure.ac  electricsheep-saver-gnome
trunk/client_generic/Client/: Console.h  CubicFrameDisplay.h  FrameDisplay.h  LinearFrameDisplay.h  Makefile.am  MonoInstance.h  PlayCounter.h  Player.cpp  Player.h  Splash.h  StartupScreen.h  Voting.cpp  Voting.h  client.cbp  client.h  client_mac.h  client_win32.h  cpu_usage_linux.h  cpu_usage_mac.h  lua_playlist.h  main.cpp
trunk/client_generic/Common/: AlignedBuffer.cpp  BlockingQueue.h  Common.cpp  Exception.h  Log.cpp  Log.h  LuaState.cpp  LuaState.h  MTimer.h  MathBase.h  ProcessForker.h  Singleton.h  (+9 more)
(+240 files in other folders)
